--- a/app/src/main/res/layout/activity_enter_to_ioc.xml
+++ b/app/src/main/res/layout/activity_enter_to_ioc.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".EnterToIOC">
 
+    <TextView
+        android:id="@+id/user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.08" />
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
@@ -15,6 +27,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/user"
         app:layout_constraintVertical_bias="0.499" />
 </android.support.constraint.ConstraintLayout>
