Intent for web search  --> ok

--- a/app/src/main/res/layout/activity_enter_to_ioc.xml
+++ b/app/src/main/res/layout/activity_enter_to_ioc.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".EnterToIOC">
 
+    <!--VIEW TEXT QUE RECIBE EL NOMBRE DEL USUARIO A DARLE LA BIENVENIDA, LOS RESTANTES VIEWS LO TENDRÁN COMO REFERENCIA PARA UBICAR-->
     <TextView
         android:id="@+id/user"
         android:layout_width="wrap_content"
@@ -16,17 +17,51 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08" />
+        app:layout_constraintVertical_bias="0.022" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+
+    <!--WEBVIEW QUE MOSTRARÁ LA RESPUESTA A LA BÚSQUEDA WEB QUE LE REALICEMOS-->
+
+
+    <WebView
+        android:id="@+id/search"
+        android:layout_width="127dp"
+        android:layout_height="214dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.132"
+        tools:layout_editor_absoluteX="150dp"
+        tools:layout_editor_absoluteY="150dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/user"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintTop_toBottomOf="@+id/user"
+        app:layout_constraintVertical_bias="0.119" />
+
+    <EditText
+        android:id="@+id/bar_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.095"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search"
+        app:layout_constraintVertical_bias="0.084" />
+
+    <!-- BUTTON PARA ENVÍAR LA CONSULTA WEB-->
+    <Button
+        android:id="@+id/btn_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/darkBlue"
+        android:text="@string/search"
+        android:textColor="@color/white"
+        android:textCursorDrawable="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.173"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bar_search"
+        app:layout_constraintVertical_bias="0.059" />
+
 </android.support.constraint.ConstraintLayout>
