--- a/app/src/main/res/layout/activity_enter_to_ioc.xml
+++ b/app/src/main/res/layout/activity_enter_to_ioc.xml
@@ -23,10 +23,6 @@
     <!--WEBVIEW QUE MOSTRARÁ LA RESPUESTA A LA BÚSQUEDA WEB QUE LE REALICEMOS-->
 
 
-    <!-- BUTTON PARA ENVÍAR LA CONSULTA WEB-->
-
-    <!-- PART 2 : HACER LLAMADAS DESDE UN BUTTON CON INTENT-->
-
     <WebView
         android:id="@+id/search"
         android:layout_width="127dp"
@@ -42,14 +38,16 @@
         android:id="@+id/bar_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:hint="@string/buscar"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.245"
+        app:layout_constraintHorizontal_bias="0.109"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search"
-        app:layout_constraintVertical_bias="0.038" />
+        app:layout_constraintVertical_bias="0.025" />
 
+    <!-- BUTTON PARA ENVÍAR LA CONSULTA WEB-->
     <Button
         android:id="@+id/btn_search"
         android:layout_width="wrap_content"
@@ -60,21 +58,24 @@
         android:textCursorDrawable="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.185"
+        app:layout_constraintHorizontal_bias="0.216"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bar_search"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.014" />
 
+
+    <!-- PART 2 : HACER LLAMADAS DESDE UN BUTTON CON INTENT-->
     <EditText
         android:id="@+id/make_call"
         android:layout_width="157dp"
-        android:layout_height="27dp"
+        android:layout_height="40dp"
         android:textColor="@color/black"
+        android:hint="@string/caller"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.893"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/user"
+        app:layout_constraintTop_toBottomOf="@+id/user"
         app:layout_constraintVertical_bias="0.4" />
 
     <Button
@@ -87,9 +88,88 @@
         android:textCursorDrawable="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.832"
+        app:layout_constraintHorizontal_bias="0.814"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/make_call"
-        app:layout_constraintVertical_bias="0.155" />
+        app:layout_constraintTop_toBottomOf="@+id/make_call"
+        app:layout_constraintVertical_bias="0.029" />
+
+
+    <!--PART 3 : COMPARTIR-->
+
+
+    <EditText
+        android:id="@+id/share"
+        android:layout_width="157dp"
+        android:layout_height="40dp"
+        android:hint="@string/sharing"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.114"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_search"
+        app:layout_constraintVertical_bias="0.326" />
+
+    <Button
+        android:id="@+id/btn_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/darkBlue"
+        android:text="@string/share"
+        android:textColor="@color/white"
+        android:textCursorDrawable="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.216"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/share"
+        app:layout_constraintVertical_bias="0.067" />
+
+
+    <!--PART 4 : TEXT A OTRA ACTIVITY-->
+
+    <EditText
+        android:id="@+id/other_activity"
+        android:layout_width="157dp"
+        android:layout_height="60dp"
+        android:hint="@string/another"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.937"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_caller"
+        app:layout_constraintVertical_bias="0.276" />
+
+    <Button
+        android:id="@+id/btn_other"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/darkBlue"
+        android:text="@string/send"
+        android:textColor="@color/white"
+        android:textCursorDrawable="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.814"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/other_activity"
+        app:layout_constraintVertical_bias="0.067" />
+
+    <!--BOTON DE SALIR DE LA APLICACIÓN-->
+    <Button
+        android:id="@+id/btn_out"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/darkBlue"
+        android:text="@string/out"
+        android:textColor="@color/white"
+        android:textCursorDrawable="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_share"
+        app:layout_constraintVertical_bias="0.611" />
 
 </android.support.constraint.ConstraintLayout>
