--- a/app/src/main/res/layout/activity_enter_to_ioc.xml
+++ b/app/src/main/res/layout/activity_enter_to_ioc.xml
@@ -77,8 +77,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user"
-        app:layout_constraintVertical_bias="0.45" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_search"
+        app:layout_constraintVertical_bias="0.04" />
 
     <Button
         android:id="@+id/btn_caller"
@@ -98,6 +98,8 @@
 
     <!--PART 4 : TEXT A OTRA ACTIVITY-->
 
+    <!--BOTON DE SALIR DE LA APLICACIÓN-->
+
     <EditText
         android:id="@+id/share"
         android:layout_width="266dp"
@@ -106,11 +108,10 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_search"
-        app:layout_constraintVertical_bias="0.305" />
-
-    <!--BOTON DE SALIR DE LA APLICACIÓN-->
+        app:layout_constraintTop_toBottomOf="@+id/btn_caller"
+        app:layout_constraintVertical_bias="0.054" />
 
     <Button
         android:id="@+id/btn_share"
@@ -129,18 +130,19 @@
 
 
     <!--PART 3 : COMPARTIR-->
+
     <EditText
         android:id="@+id/other_activity"
         android:layout_width="306dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:hint="@string/another"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_caller"
-        app:layout_constraintVertical_bias="0.463" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_share"
+        app:layout_constraintVertical_bias="0.059" />
 
     <Button
         android:id="@+id/btn_other"
@@ -155,7 +157,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/other_activity"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.063" />
 
     <Button
         android:id="@+id/btn_out"
@@ -167,9 +169,9 @@
         android:textCursorDrawable="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.547"
+        app:layout_constraintHorizontal_bias="0.541"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_share"
-        app:layout_constraintVertical_bias="0.923" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_other"
+        app:layout_constraintVertical_bias="0.516" />
 
 </android.support.constraint.ConstraintLayout>
